--- a/.gitmodules
+++ b/.gitmodules
@@ -39,10 +39,10 @@
 	url = https://github.com/ericniebler/range-v3
 [submodule "Sirit"]
 	path = app/libraries/sirit
-	url = https://github.com/yuzu-emu/sirit
+	url = https://github.com/steel101/Sirit
 [submodule "Shader Compiler"]
 	path = app/libraries/shader-compiler
-	url = https://github.com/strato-emu/shader-compiler.git
+	url = https://github.com/gameblabla/shader-compiler.git
 [submodule "libadrenotools"]
 	path = app/libraries/adrenotools
 	url = https://github.com/bylaws/libadrenotools/
